Finally implimented desktop design

--- a/index.html
+++ b/index.html
@@ -66,33 +66,34 @@
 
     <main>
         <section class="header">
-            <div class="search-section">
-                <div class="search">
+            <!-- <div class="search-section"> -->
+                <div class="h search">
                     <img src="" alt="" class="icon">
                     <input type="text">
                 </div>
 
-                <div class="user-mini-profile">
+                <div class="h user-mini-profile">
                     <img src="" alt="" class="icon">
                     <img src="" alt="" class="avatar">
-                    <p>User Name</p>
+                    <p class="name">User Name</p>
                 </div>
-            </div>
-            <div class="user-section">
-                <div class="user-profile">
-                    <img src="" alt="" class="big-avatar">
+            <!-- </div> -->
+
+            <!-- <div class="user-section"> -->
+                <div class="h user-profile">
+                    <img src="" alt="" class="icon avatar">
                     <div class="hello-user">
-                        <p>Hi there,</p>
-                        <p>User Name</p>
+                        <p class="greet">Hi there,</p>
+                        <p class="username">User Name</p>
                     </div>
                 </div>
 
-                <div class="user-actions">
+                <div class="h user-actions">
                     <button>New</button>
                     <button>Upload</button>
                     <button>Share</button>
                 </div>
-            </div>
+            <!-- </div> -->
         </section>
         
         <section class="main">
@@ -158,30 +159,30 @@
                     <section class="trendings">
                         <div class="trending-item">
                             <img src="" alt="" class="avatar">
-                            <div>
-                                <p class="user-name">@user-name</p>
-                                <p class="user-detail">World hero warrior</p>
+                            <div class="user-id">
+                                <p class="user-title">@user-name</p>
+                                <p class="user-subtitle">World hero warrior</p>
                             </div>
                         </div>
                         <div class="trending-item">
                             <img src="" alt="" class="avatar">
-                            <div>
-                                <p class="user-name">@user-name</p>
-                                <p class="user-detail">World hero warrior</p>
+                            <div class="user-id">
+                                <p class="user-title">@user-name</p>
+                                <p class="user-subtitle">World hero warrior</p>
                             </div>
                         </div>
                         <div class="trending-item">
                             <img src="" alt="" class="avatar">
-                            <div>
-                                <p class="user-name">@user-name</p>
-                                <p class="user-detail">World hero warrior</p>
+                            <div class="user-id">
+                                <p class="user-title">@user-name</p>
+                                <p class="user-subtitle">World hero warrior</p>
                             </div>
                         </div>
                         <div class="trending-item">
                             <img src="" alt="" class="avatar">
-                            <div>
-                                <p class="user-name">@user-name</p>
-                                <p class="user-detail">World hero warrior</p>
+                            <div class="user-id">
+                                <p class="user-title">@user-name</p>
+                                <p class="user-subtitle">World hero warrior</p>
                             </div>
                         </div>
                     </section>
